--- a/imp.ltc.decode~.vcxproj
+++ b/imp.ltc.decode~.vcxproj
@@ -270,6 +270,13 @@
     <ClCompile Include="src\imp.ltc.decode~.c" />
     <ClCompile Include="src\ltc_ext.c" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="lib\libltc\src\decoder.h" />
+    <ClInclude Include="lib\libltc\src\encoder.h" />
+    <ClInclude Include="lib\libltc\src\ltc.h" />
+    <ClInclude Include="src\common.h" />
+    <ClInclude Include="src\ltc_ext.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
