--- a/imp.ltc.encode~.vcxproj.filters
+++ b/imp.ltc.encode~.vcxproj.filters
@@ -11,14 +11,14 @@
     <ClCompile Include="lib\libltc\src\timecode.c">
       <Filter>libltc</Filter>
     </ClCompile>
-    <ClCompile Include="src\ltc_ext.c">
-      <Filter>libltc</Filter>
-    </ClCompile>
     <ClCompile Include="$(C74SUPPORT)\max-includes\common\dllmain_win.c">
       <Filter>maxsdk</Filter>
     </ClCompile>
     <ClCompile Include="$(C74SUPPORT)\max-includes\common\commonsyms.c">
       <Filter>maxsdk</Filter>
+    </ClCompile>
+    <ClCompile Include="lib\libltc\src\ltc.c">
+      <Filter>libltc</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -31,9 +31,6 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\common.h" />
-    <ClInclude Include="src\ltc_ext.h">
-      <Filter>libltc</Filter>
-    </ClInclude>
     <ClInclude Include="lib\libltc\src\encoder.h">
       <Filter>libltc</Filter>
     </ClInclude>
